--- a/environment.yml
+++ b/environment.yml
@@ -15,3 +15,4 @@ dependencies:
     - git+https://github.com/LIBRA-project/libra-toolbox@v0.5
     - openmc-data-downloader
     - git+https://github.com/festim-dev/openmc2dolfinx
+    - git+https://github.com/festim-dev/foam2dolfinx
