--- a/environment.yml
+++ b/environment.yml
@@ -10,6 +10,7 @@ dependencies:
   - python-gmsh
   - matplotlib
   - festim=2.0a3
+  - meshio
   - pip
   - pip:
     - git+https://github.com/LIBRA-project/libra-toolbox@v0.5
