--- a/environment.yml
+++ b/environment.yml
@@ -17,3 +17,4 @@ dependencies:
     - openmc-data-downloader
     - git+https://github.com/festim-dev/openmc2dolfinx
     - morthemes
+    - h_transport_materials
